force-app/main/default/objects/LDC__c/LDC__c.object-meta.xml
<CustomObject>
    <label>LDC</label>
    <nameField>
        <label>LDC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LDCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>