force-app/main/default/objects/LDC__c/fields/Gas_Transport_Contact__c.field-meta.xml
<CustomField>
    <fullName>Gas_Transport_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who to contact at this LDC about Gas Transport</description>
    <inlineHelpText>Who to contact at this LDC about Gas Transport</inlineHelpText>
    <label>Gas Transport Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LDCs</relationshipLabel>
    <relationshipName>LDC</relationshipName>
    <type>Lookup</type>
</CustomField>