force-app/main/default/objects/LDC__c/fields/LDC_Default_Unit__c.field-meta.xml
<CustomField>
    <fullName>LDC_Default_Unit__c</fullName>
    <description>What unit of measure does this LDC prefer?</description>
    <inlineHelpText>What unit of measure does this LDC prefer?</inlineHelpText>
    <label>LDC Default Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MMBTU</fullName>
            </value>
            <value>
                <fullName>Dth</fullName>
            </value>
            <value>
                <fullName>Therms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>