force-app/main/default/objects/LDC__c/fields/Meter_Shop_Contact__c.field-meta.xml
<CustomField>
    <fullName>Meter_Shop_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Meter Shop Contact</description>
    <label>Meter Shop Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LDCs (Meter Shop Contact)</relationshipLabel>
    <relationshipName>LDC1</relationshipName>
    <type>Lookup</type>
</CustomField>