force-app/main/default/objects/LDC__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <label>Utility</label>
    <length>50</length>
    <type>Text</type>
</CustomField>